<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_display_account_balance_key"
        android:summaryOff="Hidden"
        android:summaryOn="Shown"
        android:title="@string/pref_display_account_balance_label"/>

    <ListPreference
        android:defaultValue="@string/pref_date_format_default_value"
        android:entries="@array/pref_date_format_option_labels"
        android:entryValues="@array/pref_date_format_option_values"
        android:key="@string/pref_date_format_key"
        android:title="@string/pref_date_format_label"/>

    <ListPreference
        android:defaultValue="@string/pref_time_format_default_value"
        android:entries="@array/pref_time_format_option_labels"
        android:entryValues="@array/pref_time_format_option_values"
        android:key="@string/pref_time_format_key"
        android:title="@string/pref_time_format_label"/>


</PreferenceScreen>