<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kostas.phineas.TransactionDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details"
                android:text="@string/tv_transaction_details_label"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_reason_label"
                android:text="@string/tv_transaction_details_reason_label"
                android:textSize="22sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/tv_transaction_details"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_reason"
                android:hint="@string/hint_optional"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/tv_transaction_details_reason_label"
                android:maxLength="20"
                android:layout_alignBaseline="@+id/tv_transaction_details_reason_label"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_amount_label"
                android:text="@string/tv_transaction_details_amount_label"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_transaction_details_reason_label"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:id="@+id/button_details_plus"
                android:text="+"
                android:minHeight="30dp"
                android:minWidth="30dp"
                android:background="@color/colorPlusButton"
                android:onClick="onDetailsPlusClicked"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_transaction_details_amount_label"
                android:layout_alignBaseline="@+id/tv_transaction_details_amount_label"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:id="@+id/button_details_minus"
                android:text="-"
                android:minHeight="30dp"
                android:minWidth="30dp"
                android:background="@color/colorMinusButton"
                android:onClick="onDetailsMinusClicked"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/button_details_plus"
                android:layout_alignBaseline="@+id/tv_transaction_details_amount_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_amount"
                android:hint="@string/et_transaction_details_amount"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/button_details_minus"
                android:layout_alignTop="@+id/et_transaction_details_reason"
                android:inputType="numberDecimal"
                android:layout_alignBaseline="@+id/tv_transaction_details_amount_label"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_category_label"
                android:text="@string/tv_transaction_details_category_label"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_transaction_details_amount_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_category"
                android:hint="@string/hint_optional"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/tv_transaction_details_category_label"
                android:maxLength="15"
                android:layout_alignBaseline="@+id/tv_transaction_details_category_label"
                android:layout_alignTop="@+id/et_transaction_details_amount"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_time_label"
                android:text="@string/tv_transaction_details_time_label"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:onClick="onTimeClicked"
                android:layout_below="@+id/tv_transaction_details_category_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_time"
                android:hint="@string/hint_optional"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/tv_transaction_details_time_label"
                android:maxLength="15"
                android:inputType="none"
                android:layout_alignBaseline="@+id/tv_transaction_details_time_label"
                android:layout_alignTop="@+id/et_transaction_details_amount"
                android:onClick="onTimeClicked"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_date_label"
                android:text="@string/tv_transaction_details_date_label"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:onClick="onDateClicked"
                android:layout_below="@+id/tv_transaction_details_time_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_date"
                android:hint="@string/hint_optional"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/tv_transaction_details_date_label"
                android:inputType="none"
                android:onClick="onDateClicked"
                android:layout_alignBaseline="@+id/tv_transaction_details_date_label"
                android:layout_alignTop="@+id/et_transaction_details_amount"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_transaction_details_description_label"
                android:text="@string/tv_transaction_details_description_label"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:onClick="onDateClicked"
                android:layout_below="@+id/tv_transaction_details_date_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_transaction_details_description"
                android:hint="@string/et_transaction_details_description"
                android:textSize="22sp"
                android:maxLines="10"
                android:layout_below="@+id/tv_transaction_details_description_label"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
