<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.kostas.phineas.MainActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/rv_top_layout"
        android:background="@color/colorTopLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:id="@+id/linear_layout_bank_account">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/bank_account_icon"
                android:layout_marginEnd="5dp"
                android:id="@+id/iv_bank_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/tv_bank_account_value"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/transfer_icon"
            android:id="@+id/iv_transfer"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:onClick="onTransferClicked"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:id="@+id/linear_layout_wallet">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/wallet_icon"
                android:layout_marginEnd="5dp"
                android:id="@+id/iv_wallet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_wallet_value"/>
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reason_hint"
            android:id="@+id/et_quick_reason"
            android:maxWidth="120dp"
            android:maxLength="20"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linear_layout_bank_account"
            android:layout_marginStart="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:id="@+id/et_quick_amount"
            android:inputType="numberDecimal"
            android:maxWidth="80dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@+id/linear_layout_bank_account"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/linear_layout_bank_account">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/iv_quick_plus_button"
                android:src="@drawable/plus_icon2"
                android:layout_marginEnd="10dp"
                android:onClick="onPlusButtonClicked"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/iv_quick_minus_button"
                android:src="@drawable/minus_icon2"
                android:layout_marginEnd="10dp"
                android:onClick="onMinusButtonClicked"/>
        </LinearLayout>


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="#dadada"
        android:layout_below="@id/rv_top_layout"
        android:id="@+id/v_simple_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_recent_transactions"
        android:text="@string/recent_transactions_label"
        android:layout_below="@id/v_simple_line"
        android:textAlignment="center"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorRecentTransactions"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/colorViewSeparator"
        android:layout_below="@id/tv_recent_transactions"
        android:id="@+id/v_simple_line_2"/>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/button_add_detailed_transaction_label"
        android:id="@+id/button_add_detailed_transaction"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:onClick="onAddDetailedTransactionClicked"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_simple_line"
        android:layout_above="@id/button_add_detailed_transaction">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabGravity="fill"
                android:id="@+id/main_activity_tabs"
                android:background="@color/colorTopLayout"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewPager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    </android.support.design.widget.CoordinatorLayout>



</RelativeLayout>
